# contribu

./: README.md  pyproject.toml
src/contribu/: __init__.py
src/contribu/cli/: main.py
src/contribu/cli/commands/: fetch_repos.py  find_repos.py  init.py  me.py
src/contribu/core/: repo_scanner.py
src/contribu/core/models/: __init__.py  profile.py  repository.py
