[project]
name = "contribu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "steer-xyz", email = "steer.xyz@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "typer>=0.16.0",
]

[project.scripts]
tribu = "contribu.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


